# labs-OOP

./: .gitignore  README.md
3D_array/: ConsoleApplication4.cpp  ConsoleApplication4.vcxproj  README.md
Fabric/Fabric/: CMakeLists.txt
Fabric/Fabric/CMakeProject1/: CMakeProject1.cpp
Integral_Calc/: README.md  main.py
Keyboard/: CMakeLists.txt
Keyboard/Keyboard/: CMakeLists.txt  Keyboard.cpp  Keyboard.h
Registration/: CMakeLists.txt
Registration/Registration/: CMakeLists.txt  Registration.cpp  Registration.h
Vector_Calc/: CMakeLists.txt  README.md  header.hpp  main.cpp  point.cpp
pythonProject/: main.py
